# timer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/include/timer/: observer.h  source.h  timer.h
src/src/: observer.c  source.c  timer.c  timer_observer.c  timer_source.c
tests/: CMakeLists.txt  run_all_tests.cpp  timer_test.cpp
